feat(i18n): Translate service pages to Persian and Arabic

--- a/src/i18n/ar/maintenance.json
+++ b/src/i18n/ar/maintenance.json
@@ -1,60 +1,60 @@
 {
-    "title": "صيانة الموقع وخطط الرعاية",
-    "subtitle": "موقع آمن، سريع، ومتوفر دائماً – لتركز أنت على نمو أعمالك.",
-    "description": "لا تدع المشاكل التقنية توقفك. تضمن خطط الرعاية المتميزة لدينا بقاء موقعك آمناً ومحدثاً ومحسناً بينما تركز أنت على إدارة وتنمية مشروعك.",
+    "title": "صيانة ورعاية الموقع",
+    "subtitle": "آمن، سريع، ومتصل دائمًا - لتركز على عملك.",
+    "description": "لا تدع المشاكل التقنية تبطئك. تضمن خطط الرعاية المميزة لدينا بقاء موقعك آمنًا ومحسنًا ومحدثًا بينما تركز أنت على تنمية عملك.",
     "features": [
-        "مراقبة أمنية وتنظيف البرمجيات الخبيثة 24/7",
+        "مراقبة الأمن والتنظيف 24/7",
         "تحديثات أسبوعية آمنة (النواة، القالب، الإضافات)",
-        "نسخ احتياطي يومي سحابي (خارجي)",
-        "تحسين الأداء ومراقبة وقت التشغيل (Uptime)",
-        "دعم فني ذو أولوية وتعديلات المحتوى"
+        "نسخ احتياطية سحابية يومية (خارج الموقع)",
+        "تحسين الأداء ومراقبة وقت التشغيل",
+        "دعم ذو أولوية وتعديلات المحتوى"
     ],
     "benefits": {
         "0": {
             "title": "راحة بال تامة",
-            "description": "لا تقلق أبداً بشأن تعطل موقعك أو اختراقه. نحن نتولى جميع الأمور التقنية لتنام قرير العين."
+            "description": "لا تقلق أبدًا بشأن تعطل موقعك أو اختراقه. نحن نتولى كل شيء تقني لتتمكن من النوم بسلام."
         },
         "1": {
-            "title": "زيادة الإيرادات",
-            "description": "الموقع السريع والمتوفر دائماً يحقق مبيعات أكثر. تضمن تحسيناتنا أن لا تفقد أي عميل بسبب مشاكل تقنية."
+            "title": "تعظيم الإيرادات",
+            "description": "الموقع السريع والمتصل دائمًا يحقق تحويلات أفضل. تضمن مراقبة وقت التشغيل وتعديلات الأداء لدينا أنك لن تفوت عملية بيع أبدًا."
         },
         "2": {
             "title": "حماية سمعتك",
-            "description": "الخروقات الأمنية تدمر الثقة. نحن نحافظ على سلامة بيانات عملائك وسمعة علامتك التجارية بأمان عالي المستوى."
+            "description": "الاختراقات الأمنية تدمر الثقة. نحافظ على بيانات عملائك آمنة وسمعة علامتك التجارية نظيفة بأمان عسكري."
         },
         "3": {
             "title": "توفير الوقت والمال",
-            "description": "توظيف مطور لإصلاحات فردية مكلف. توفر خططنا فريقاً تقنياً مخصصاً بجزء بسيط من التكلفة."
+            "description": "توظيف مطور لإصلاحات فردية مكلف. توفر خططنا ذات السعر الثابت فريقًا تقنيًا مخصصًا بجزء بسيط من التكلفة."
         }
     },
     "process": {
         "0": {
-            "title": "التهيئة والتدقيق",
-            "description": "نقوم بتحليل موقعك، وأخذ نسخ احتياطية كاملة، وإصلاح أي مشاكل فورية للبدء من صفحة نظيفة."
+            "title": "الإعداد والتدقيق",
+            "description": "نقوم بتحليل موقعك، ونسخ كل شيء احتياطيًا، وإصلاح أي مشاكل فورية لنوصلك إلى 'صفحة نظيفة'."
         },
         "1": {
-            "title": "التحسين الأولي",
-            "description": "ننفذ التخزين المؤقت، وجدران الحماية الأمنية، وتحسينات السرعة لتعزيز الأداء والأمان فوراً."
+            "title": "التحسين",
+            "description": "نقوم بتنفيذ التخزين المؤقت، وجدران الحماية الأمنية، وتعديلات الأداء لتعزيز السرعة والسلامة فورًا."
         },
         "2": {
             "title": "الروتين الأسبوعي",
-            "description": "كل أسبوع، نفحص موقعك بصرياً، ونجري تحديثات آمنة، ونشغل النسخ الاحتياطي السحابي."
+            "description": "كل أسبوع، نقوم بفحص موقعك بصريًا، وننفذ تحديثات آمنة، ونشغل نسخًا احتياطية سحابية."
         },
         "3": {
             "title": "التقارير الشهرية",
-            "description": "تتلقى تقرير PDF مفصل يوضح بالضبط ما قمنا به، ووقت التشغيل، والحالة الأمنية."
+            "description": "تتلقى تقرير PDF مفصل يوضح بالضبط ما فعلناه، ووقت التشغيل، وحالتك الأمنية."
         }
     },
-    "heroDescription": "خطط شاملة لرعاية الموقع تحافظ على أمان وسرعة مشروعك وتبقيه متاحاً دائماً. لا تدع المشاكل التقنية تبطئ نموك.",
+    "heroDescription": "خطط رعاية شاملة للموقع تبقي عملك آمنًا وسريعًا ومفتوحًا دائمًا. لا تدع الصداع التقني يبطئ نموك.",
     "ctaButton": "ابدأ الآن",
     "faq": {
-        "q1": "ما الذي تشمله خطة الرعاية عادةً؟",
-        "a1": "تغطي خطتنا الشاملة كل ما يلزم للحفاظ على صحة موقعك. يشمل ذلك تحديثات أسبوعية لجميع البرمجيات، ونسخاً احتياطياً يومياً على سحابة آمنة، وفحصاً أمنياً في الوقت الفعلي، ومراقبة عمل الموقع، ودعماً فنياً ذا أولوية. اعتبرها بمثابة بوليصة تأمين وفريق تقني مخصص لموقعك.",
+        "q1": "ما الذي تتضمنه خطة الرعاية عادةً؟",
+        "a1": "تغطي خطتنا الشاملة كل ما يلزم للحفاظ على صحة موقعك. يشمل ذلك التحديثات الأسبوعية لجميع البرامج، والنسخ الاحتياطية اليومية خارج الموقع إلى سحابة آمنة، والفحص الأمني في الوقت الفعلي، ومراقبة وقت التشغيل، والدعم الفني ذو الأولوية. فكر في الأمر كبوليصة تأمين وفريق تقني مخصص لموقعك.",
         "q2": "لماذا أحتاج إلى خطة صيانة؟",
-        "a2": "المواقع هي برمجيات معقدة تتطلب رعاية مستمرة. بدون التحديثات المنتظمة، تصبح المواقع عرضة للاختراق، أو البطء، أو التوقف الكامل. تمنع خطتنا هذه الكوارث المكلفة، مما يمنحك راحة البال ويضمن أن واجهتك الرقمية مفتوحة دائماً للأعمال.",
-        "q3": "هل أنا مقيد بعقد طويل الأجل؟",
-        "a3": "كلا. نحن نؤمن بكسب ثقتك في كل شهر. خططنا شهرية، ويمكنك الإلغاء في أي وقت بشكل قانوني وبدون تعقيدات. نريد أن تبقى لأنك تحب الخدمة، وليس لأنك مضطر لذلك.",
-        "q4": "ماذا يحدث إذا تم اختراق موقعي أثناء اشتراكي؟",
-        "a4": "في الحالة المستبعدة لتعرض موقعك للاختراق وهو تحت رعايتنا، سنقوم بتنظيفه واستعادته بالكامل مجاناً. نحن نتحمل المسؤولية الكاملة عن أمن موقعك حتى لا تضطر للقلق بشأن ذلك."
+        "a2": "المواقع برامج معقدة تتطلب رعاية مستمرة. بدون تحديثات منتظمة، تصبح عرضة للمخترقين، أو تتباطأ، أو تتعطل تمامًا. تمنع خطتنا هذه الكوارث المكلفة، مما يمنحك راحة البال ويضمن أن واجهتك الرقمية مفتوحة دائمًا للعمل.",
+        "q3": "هل أنا ملزم بعقد طويل الأجل؟",
+        "a3": "لا. نحن نؤمن بكسب ثقتك كل شهر. خططنا شهرية، ويمكنك الإلغاء في أي وقت بشكل قانوني وبدون متاعب. نريدك أن تبقى لأنك تحب الخدمة، وليس لأنك مضطر لذلك.",
+        "q4": "ماذا يحدث إذا تم اختراق موقعي وأنا مشترك في خطتكم؟",
+        "a4": "في الحالة غير المحتملة التي يتم فيها اختراق موقعك أثناء مراقبتنا، سنقوم بتنظيفه واستعادته مجانًا تمامًا. نتحمل المسؤولية الكاملة عن أمان موقعك حتى لا تضطر للقلق بشأنه."
     }
 }
