--- a/src/i18n/ar/speed-optimization.json
+++ b/src/i18n/ar/speed-optimization.json
@@ -1,60 +1,60 @@
 {
-    "title": "تحسين السرعة",
-    "subtitle": "تعزيز السرعة و Core Web Vitals",
-    "description": "تحسين وقت التحميل واجتياز تقييمات مؤشرات الويب الحيوية.",
+    "title": "تحسين سرعة الموقع و Core Web Vitals",
+    "subtitle": "أوقات تحميل فائقة السرعة لتحسين محركات البحث وزيادة معدل التحويل.",
+    "description": "الموقع البطيء يكلفك المال. نقوم بتحسين أكواد موقعك وصوره وإعدادات الخادم للوصول إلى درجة 90+ في Google PageSpeed، مما يضمن اجتياز Core Web Vitals وترتيب أعلى.",
     "features": [
-        "إعداد متقدم للذاكرة المؤقتة (Caching) و CDN",
-        "ضغط الصور وتنسيقات الجيل الجديد (WebP)",
-        "تصغير الأكواد (CSS/JS/HTML)",
-        "تنظيف وتحسين قاعدة البيانات",
+        "تكوين التخزين المؤقت المتقدم و CDN",
+        "ضغط الصور وتنسيقات الجيل القادم",
+        "تصغير الكود (CSS/JS/HTML)",
+        "تطوير وتنظيف قاعدة البيانات",
         "اجتياز تقييم Core Web Vitals"
     ],
     "benefits": {
         "0": {
-            "title": "تصدر نتائج جوجل",
-            "description": "جوجل يفضل المواقع السريعة بشكل صريح. اجتياز مؤشرات الويب الأساسية هو إشارة ترتيب مباشرة ترفعك فوق المنافسين."
+            "title": "ترتيب أعلى على جوجل",
+            "description": "جوجل تفضل بوضوح المواقع الأسرع. اجتياز Core Web Vitals هو إشارة تصنيف مباشرة تدفعك فوق المنافسين."
         },
         "1": {
-            "title": "زيادة معدل التحويل",
+            "title": "زيادة معدلات التحويل",
             "description": "تأخير ثانية واحدة يقلل التحويلات بنسبة 7%. السرعة هي أبسط طريقة لزيادة المبيعات دون إنفاق المزيد على الإعلانات."
         },
         "2": {
             "title": "تجربة مستخدم أفضل",
-            "description": "المستخدمون يكرهون الانتظار. الموقع السريع يبقي الزوار متفاعلين، ويقلل معدل الارتداد (Bounce Rate)، ويبني الثقة."
+            "description": "المستخدمون يكرهون الانتظار. الموقع السريع يبقي الزوار متفاعلين، ويقلل معدلات الارتداد، ويبني الثقة في علامتك التجارية."
         },
         "3": {
             "title": "توفير تكاليف الاستضافة",
-            "description": "الكود المحسن يستهلك موارد أقل. هذا يعني أن موقعك يمكنه التعامل مع حركة مرور أكبر دون الحاجة لترقيات خادم باهظة."
+            "description": "الكود المحسن يستخدم موارد خادم أقل. هذا يعني أن موقعك يمكنه التعامل مع المزيد من الزوار دون الحاجة إلى ترقيات خادم باهظة الثمن."
         }
     },
     "process": {
         "0": {
             "title": "تدقيق الأداء العميق",
-            "description": "نحلل كل ملف وسكريبت واستعلام للعثور بدقة على ما يبطئ موقعك، ونضع درجة الأساس."
+            "description": "نقوم بتحليل كل ملف، وسكريبت، واستعلام لمعرفة ما يبطئ موقعك بالضبط ونحدد درجة أساسية."
         },
         "1": {
             "title": "تحسين الكود والأصول",
-            "description": "نقوم بتصغير الأكواد، وضغط الصور، وتأجيل السكريبتات غير الضرورية لجعل التحميل الأولي فورياً."
+            "description": "نقوم بتصغير الكود، وضغط الصور، وتأجيل الاسكريبتات غير الضرورية لجعل التحميل الأولي فوريًا."
         },
         "2": {
-            "title": "ضبط الخادم (Server)",
-            "description": "نقوم بإعداد التخزين المؤقت المتقدم (Redis/Varnish) وشبكات CDN لتوصيل المحتوى من أقرب نقطة للمستخدم."
+            "title": "ضبط جانب الخادم",
+            "description": "نقوم بتكوين التخزين المؤقت المتقدم (Redis/Varnish) وشبكات توصيل المحتوى (CDNs) لخدمة المحتوى الخاص بك من الحافة، الأقرب لمستخدميك."
         },
         "3": {
-            "title": "التحقق والتقارير",
-            "description": "نعيد الاختبار باستخدام أدوات جوجل ونسلمك تقرير ما قبل وبعد يثبت مكاسب السرعة."
+            "title": "التحقق وتقديم التقارير",
+            "description": "نعيد الاختبار باستخدام أدوات Google PageSpeed ونقدم تقريرًا يوضح السرعة قبل وبعد للإثبات."
         }
     },
-    "heroDescription": "ارفع ترتيبك في جوجل ومعدلات التحويل مع موقع فائق السرعة. نحن نقوم بتحسين الكود والصور وإعدادات الخادم لأقصى أداء.",
-    "ctaButton": "تحسين السرعة الآن",
+    "heroDescription": "عزز ترتيبك في جوجل ومعدلات التحويل بموقع فائق السرعة. نقوم بتحسين الكود والصور وإعدادات الخادم لتحقيق أقصى أداء.",
+    "ctaButton": "زيادة سرعتي",
     "faq": {
-        "q1": "ما مدى سرعة موقعي؟",
-        "a1": "نطمح للحصول على درجات 90+ في Google PageSpeed Insights ووقت تحميل أقل من ثانيتين. ومع ذلك، تعتمد النتائج على الاستضافة وتعقيد الموقع.",
-        "q2": "هل هذه خدمة لمرة واحدة؟",
-        "a2": "نعم، التحسين مشروع لمرة واحدة. ومع ذلك، فإن إضافة محتوى غير محسن لاحقًا قد يؤدي إلى إبطائه مرة أخرى.",
-        "q3": "هل تحتاجون إلى الوصول للاستضافة؟",
-        "a3": "نعم، نحتاج عادةً إلى وصول FTP/SFTP ووصول المسؤول للوحة تحكم ووردبريس أو الخادم.",
-        "q4": "هل سيؤثر ذلك على تصميم موقعي؟",
-        "a4": "نحن نتصرف بحذر لضمان عدم تأثير التحسينات على التخطيط المرئي. نقوم باختبار كل شيء في بيئة تجريبية أولاً."
+        "q1": "كم سيصبح موقعي أسرع؟",
+        "a1": "بينما كل موقع فريد، نحن نضمن تحسنًا كبيرًا. نهدف للحصول على درجة 'خضراء' (90+) في Google PageSpeed Insights وأوقات تحميل أقل من ثانيتين. هذا التحسن حاسم لكل من تجربة المستخدم وترتيب جوجل.",
+        "q2": "هل هذا إصلاح لمرة واحدة أم خدمة شهرية؟",
+        "a2": "تحسيننا هو مشروع شامل لمرة واحدة. نقوم بإصلاح البنية التحتية التقنية لموقعك. ومع ذلك، قد يتطلب الحفاظ على هذه السرعة بمرور الوقت مع إضافة محتوى جديد فحوصات عرضية، والتي تغطيها خطط الصيانة لدينا.",
+        "q3": "هل سيؤدي تحسين السرعة إلى كسر تصميم موقعي؟",
+        "a3": "أبدًا. نحن نختبر بدقة كل تغيير في بيئة تجريبية قبل تطبيقه على موقعك المباشر. نضمن بقاء التخطيط والوظائف والتصميم كما هو—فقط أسرع بكثير.",
+        "q4": "هل تحتاجون إلى الوصول إلى الخادم الخاص بي؟",
+        "a4": "نعم، لإجراء تحسينات عميقة، سنحتاج إلى وصول إداري إلى لوحة تحكم ووردبريس ولوحة تحكم الاستضافة (FTP/SFTP). نتعامل مع بيانات اعتمادك بأعلى مستوى من الأمان."
     }
 }
