--- a/src/i18n/ar/ui-ux-audit.json
+++ b/src/i18n/ar/ui-ux-audit.json
@@ -1,60 +1,60 @@
 {
-    "title": "مراجعة تجربة المستخدم (UI/UX) الاحترافية",
-    "subtitle": "اكتشف نقاط الاحتكاك الخفية التي تقتل مبيعاتك.",
-    "description": "توقف عن التخمين لماذا لا يشتري الزوار. تحدد مراجعتنا الخبيرة بدقة أين يتعثر المستخدمون، أو يشعرون بالإحباط، أو يغادرون، مما يمنحك خريطة طريق لمضاعفة معدل التحويل لديك.",
+    "title": "تدقيق UI/UX احترافي",
+    "subtitle": "اكتشف نقاط الاحتكاك الخفية التي تقتل تحويلاتك.",
+    "description": "توقف عن التخمين لماذا لا يشتري الزوار. يحدد تدقيقنا الخبير بالضبط أين يعلق المستخدمون، أو يصابون بالإحباط، أو يرتبكون، مما يوفر لك خارطة طريق لمضاعفة معدل التحويل الخاص بك.",
     "features": [
-        "تحليل شامل بالفيديو لتجربة المستخدم",
-        "تقييم إرشادي واختبار قابلية الاستخدام",
-        "تحليل الاحتكاك في مسار المبيعات (Funnel)",
-        "فحص معايير إمكانية الوصول (Accessibility)",
-        "تقرير PDF قابل للتنفيذ وخريطة طريق للإصلاح"
+        "تحليل فيديو شامل للإجراءات التفصيلية",
+        "التقييم الاستدلالي واختبار قابلية الاستخدام",
+        "تحليل احتكاك قمع التحويل",
+        "فحص الامتثال لإمكانية الوصول",
+        "تقرير PDF قابل للتنفيذ وخارطة طريق للإصلاح"
     ],
     "benefits": {
         "0": {
-            "title": "توقف عن التخمين",
-            "description": "الآراء لا تبيع؛ البيانات تفعل. نستبدل جدال الفريق بتحليل موضوعي للمكان والسبب الذي يغادر فيه المستخدمون موقعك."
+            "title": "توقف عن التخمين، ابدأ بالمعرفة",
+            "description": "الآراء لا تبيع؛ البيانات تفعل. نستبدل مناقشات الفريق بتحليل موضوعي للمكان والسبب الذي يجعل المستخدمين يغادرون موقعك."
         },
         "1": {
-            "title": "ضاعف العائد على الاستثمار",
-            "description": "تحويل الزوار الحاليين أرخص من شراء زوار جدد. إصلاح مشاكل الاستخدام هو النشاط الأكثر ربحية الذي يمكنك القيام به."
+            "title": "ضاعف عائد الاستثمار (ROI)",
+            "description": "تحويل الزوار الحاليين أرخص من شراء زيارات جديدة. إصلاح مشاكل قابلية الاستخدام هو النشاط الأعلى عائدًا للاستثمار الذي يمكنك القيام به."
         },
         "2": {
-            "title": "نظرة جديدة ومحايدة",
-            "description": "أنت قريب جداً من منتجك لدرجة أنك لا ترى العيوب. نحن نقدم منظوراً خبيراً ومحايداً لتجربة المستخدم لأول مرة."
+            "title": "زوج جديد من العيون",
+            "description": "أنت قريب جدًا من منتجك لدرجة أنك لا ترى العيوب. نحن نقدم منظورًا غير متحيز وخبيرًا لتجربة المستخدم لأول مرة."
         },
         "3": {
-            "title": "خريطة طريق للتنفيذ",
-            "description": "لا نكتفي بسرد المشاكل؛ نعطيك حلولاً ذات أولوية. تحصل على قائمة مرجعية جاهزة للتنفيذ فوراً من قبل المطورين."
+            "title": "خارطة طريق قابلة للتنفيذ",
+            "description": "نحن لا نسرد المشاكل فقط؛ نحن نقدم حلولًا ذات أولوية. تحصل على قائمة مرجعية جاهزة للمطورين لتنفيذها على الفور."
         }
     },
     "process": {
         "0": {
-            "title": "الاكتشاف والفهم",
-            "description": "نتعرف على أهداف عملك، وجمهورك المستهدف، ومقاييس التحويل الرئيسية لفهم ما يعنيه 'النجاح' لك."
+            "title": "الاكتشاف",
+            "description": "نتعرف على أهداف عملك، والجمهور المستهدف، ومقاييس التحويل الرئيسية لفهم كيف يبدو 'النجاح'."
         },
         "1": {
-            "title": "التقييم الإرشادي",
-            "description": "يقوم خبراؤنا بتقييم موقعك مقابل 10 مبادئ عالمية لقابلية الاستخدام (مبادئ جاكوب نيلسن)."
+            "title": "المراجعة الاستدلالية",
+            "description": "يقيم خبراؤنا موقعك مقابل 10 مبادئ عالمية معترف بها لقابلية الاستخدام (استدلالات جاكوب نيلسن)."
         },
         "2": {
-            "title": "تحليل الرحلة (Walkthrough)",
-            "description": "نحاكي رحلات المستخدم الحقيقية (الشراء، التسجيل) ونسجل فيديو يوضح كل نقطة احتكاك نواجهها."
+            "title": "تحليل الإجراءات التفصيلية",
+            "description": "نحاكي رحلات المستخدم الحقيقية (الشراء، التسجيل) ونسجل فيديو يوضح بالتفصيل كل نقطة احتكاك تمت مواجهتها."
         },
         "3": {
             "title": "تسليم الاستراتيجية",
             "description": "تتلقى الفيديو وتقرير PDF مرتب حسب الأولوية. نراجع النتائج معك لضمان الوضوح التام."
         }
     },
-    "heroDescription": "احصل على تدقيق فيديو شامل لأكثر من 20 دقيقة لموقعك. حدد نقاط الاحتكاك واحصل على خريطة طريق واضحة لزيادة المبيعات.",
-    "ctaButton": "احصل على التدقيق",
+    "heroDescription": "احصل على تدقيق فيديو شامل لأكثر من 20 دقيقة لموقعك. حدد نقاط الاحتكاك واحصل على خارطة طريق واضحة لزيادة المبيعات.",
+    "ctaButton": "احصل على تدقيقي",
     "faq": {
-        "q1": "ما الذي سأحصل عليه بالضبط؟",
-        "a1": "ستحصل على تشخيص كامل لموقعك: فيديو مدته 20+ دقيقة نراجع فيه موقعك كمستخدم في الوقت الفعلي، بالإضافة إلى تقرير PDF مفصل يرتب المشاكل حسب الأهمية مع توصيات محددة وقابلة للتنفيذ حول كيفية إصلاحها.",
+        "q1": "ما الذي أحصل عليه بالضبط مع التدقيق؟",
+        "a1": "تتلقى تشخيصًا كاملًا لموقعك. يشمل ذلك فيديو للإجراءات التفصيلية لمدة 20+ دقيقة حيث نقوم بتحليل موقعك في الوقت الفعلي كمستخدم، بالإضافة إلى تقرير PDF مفصل يحدد أولويات المشاكل حسب الشدة مع توصيات محددة وقابلة للتنفيذ حول كيفية إصلاحها.",
         "q2": "هل يمكنكم تنفيذ التغييرات لي؟",
-        "a2": "بالتأكيد. بينما المراجعة هي خدمة تشخيصية مستقلة، يقوم العديد من العملاء بتوظيفنا بعد ذلك لتنفيذ الإصلاحات الموصى بها. يمكننا تقديم عرض سعر منفصل للتنفيذ الدقيق لخريطة الطريق.",
-        "q3": "كم تستغرق المراجعة؟",
-        "a3": "المراجعة اليدوية الدقيقة تستغرق وقتاً. عادة ما نقوم بتسليم الفيديو والتقرير الشامل خلال 3-5 أيام عمل من الحجز.",
-        "q4": "هل هذا مفيد للمواقع القديمة؟",
-        "a4": "إنه مفيد جداً للمواقع القائمة! إذا كان لديك زيارات ولكن مبيعات قليلة، فإن المراجعة غالباً ما توفر أعلى عائد على الاستثمار (ROI)؛ لأنها تقوم بإصلاح الثقوب في الدلو قبل أن تصب فيه المزيد من الماء (الإعلانات)."
+        "a2": "بالتأكيد. بينما التدقيق هو خدمة تشخيصية مستقلة، يقوم العديد من العملاء بتوظيفنا بعد ذلك لتنفيذ الإصلاحات الموصى بها. يمكننا تقديم عرض أسعار منفصل للتنفيذ الدقيق لخارطة طريق التحسين.",
+        "q3": "كم يستغرق التدقيق؟",
+        "a3": "التدقيق اليدوي الشامل يستغرق وقتًا. عادة ما نسلم الفيديو والتقرير الشامل في غضون 3-5 أيام عمل من الحجز.",
+        "q4": "هل هذا مفيد لموقع قديم؟",
+        "a4": "من المحتمل أن يكون هذا *الأكثر* فائدة للمواقع القائمة. إذا كان لديك زيارات ولكن المبيعات منخفضة، فإن التدقيق غالبًا ما يوفر أعلى عائد استثمار لأي استثمار تسويقي من خلال إصلاح الدلو المثقوب قبل صب المزيد من الماء (الإعلانات) فيه."
     }
 }
