--- a/src/i18n/fa/maintenance.json
+++ b/src/i18n/fa/maintenance.json
@@ -1,60 +1,60 @@
 {
-    "title": "نگهداری وب‌سایت",
-    "subtitle": "وب‌سایت امن و به‌روز",
-    "description": "خدمات پشتیبانی جامع برای امنیت و سرعت سایت شما.",
+    "title": "نگهداری و مراقبت از وب‌سایت",
+    "subtitle": "امن، سریع و همیشه آنلاین – تا شما بتوانید روی کسب‌وکار خود تمرکز کنید.",
+    "description": "اجازه ندهید مشکلات فنی سرعت شما را کم کند. پلن‌های مراقبت ویژه ما تضمین می‌کنند که وب‌سایت شما امن، بهینه و به‌روز باقی می‌ماند در حالی که شما روی رشد کسب‌وکار خود تمرکز می‌کنید.",
     "features": [
-        "مانیتورینگ امنیتی ۲۴/۷ و پاکسازی بدافزار",
-        "به‌روزرسانی هفتگی ایمن (هسته، قالب، افزونه‌ها)",
-        "پشتیبان‌گیری ابری روزانه (خارج از هاست)",
+        "مانیتورینگ امنیتی ۲۴/۷ و پاکسازی",
+        "به‌روزرسانی‌های ایمن هفتگی (هسته، قالب، افزونه‌ها)",
+        "بک‌آپ‌های ابری روزانه (خارج از سایت)",
         "بهینه‌سازی عملکرد و مانیتورینگ آپ‌تایم",
-        "پشتیبانی اولویت‌دار و تغییرات محتوایی"
+        "پشتیبانی اولویت‌دار و ویرایش محتوا"
     ],
     "benefits": {
         "0": {
-            "title": "آرامش خیال کامل",
-            "description": "دیگر نگران خرابی یا هک شدن سایت نباشید. ما تمام امور فنی را مدیریت می‌کنیم تا شما با خیالی آسوده بخوابید."
+            "title": "آرامش خاطر کامل",
+            "description": "هرگز نگران خراب شدن یا هک شدن وب‌سایت خود نباشید. ما تمام امور فنی را مدیریت می‌کنیم تا شما با خیال راحت بخوابید."
         },
         "1": {
-            "title": "انفجار درآمد",
-            "description": "یک سایت سریع و همیشه فعال، فروش بیشتری دارد. بهینه‌سازی‌های ما تضمین می‌کنند که هرگز مشتری را از دست ندهید."
+            "title": "حداکثر درآمد",
+            "description": "یک وب‌سایت سریع و همیشه آنلاین نرخ تبدیل بهتری دارد. مانیتورینگ آپ‌تایم و ترفندهای عملکردی ما تضمین می‌کنند که هرگز فروشی را از دست ندهید."
         },
         "2": {
-            "title": "حفاظت از اعتبار برند",
-            "description": "نقض امنیتی اعتماد مشتری را نابود می‌کند. ما با امنیت نظامی از داده‌های کاربران و اعتبار برند شما محافظت می‌کنیم."
+            "title": "حفاظت از اعتبار شما",
+            "description": "نقص‌های امنیتی اعتماد را از بین می‌برند. ما داده‌های مشتریان شما را ایمن و شهرت برند شما را با امنیت در سطح نظامی لکه‌دار نمی‌کنیم."
         },
         "3": {
             "title": "صرفه‌جویی در زمان و هزینه",
-            "description": "استخدام توسعه‌دهنده برای هر مشکل کوچک گران است. طرح‌های ما یک تیم فنی اختصاصی را با هزینه‌ای ناچیز در اختیار شما می‌گذارند."
+            "description": "استخدام یک توسعه‌دهنده برای اصلاحات فردی گران است. پلن‌های نرخ ثابت ما یک تیم فنی اختصاصی را با کسری از هزینه فراهم می‌کنند."
         }
     },
     "process": {
         "0": {
             "title": "آنبوردینگ و ممیزی",
-            "description": "ما سایت شما را تحلیل می‌کنیم، بک‌آپ کامل می‌گیریم و مشکلات فوری را رفع می‌کنیم تا شروعی پاک داشته باشیم."
+            "description": "ما سایت شما را تحلیل می‌کنیم، از همه چیز بک‌آپ می‌گیریم و مشکلات فوری را برطرف می‌کنیم تا شما را به یک 'وضعیت پاک' برسانیم."
         },
         "1": {
-            "title": "بهینه‌سازی اولیه",
-            "description": "ما کشینگ، فایروال‌های امنیتی و ترفندهای سرعت را پیاده‌سازی می‌کنیم تا امنیت و سرعت فوراً افزایش یابد."
+            "title": "بهینه‌سازی",
+            "description": "ما کشینگ، فایروال‌های امنیتی و ترفندهای عملکرد را برای افزایش فوری سرعت و ایمنی پیاده‌سازی می‌کنیم."
         },
         "2": {
             "title": "روتین هفتگی",
-            "description": "هر هفته، سایت شما را بازرسی چشمی می‌کنیم، به‌روزرسانی‌های ایمن را انجام می‌دهیم و بک‌آپ ابری می‌گیریم."
+            "description": "هر هفته، ما سایت شما را به صورت بصری بازرسی می‌کنیم، به‌روزرسانی‌های ایمن انجام می‌دهیم و بک‌آپ‌های ابری اجرا می‌کنیم."
         },
         "3": {
             "title": "گزارش‌دهی ماهانه",
-            "description": "شما یک گزارش PDF دریافت می‌کنید که دقیقاً کارهای انجام شده، آپ‌تایم و وضعیت امنیتی را نشان می‌دهد."
+            "description": "شما یک گزارش PDF دقیق دریافت می‌کنید که نشان می‌دهد دقیقاً چه کاری انجام داده‌ایم، آپ‌تایم شما و وضعیت امنیتی شما."
         }
     },
-    "heroDescription": "برنامه‌های جامع مراقبت از وب‌سایت که کسب‌وکار شما را ایمن، سریع و همیشه باز نگه می‌دارد. اجازه ندهید مشکلات فنی رشد شما را متوقف کند.",
+    "heroDescription": "پلن‌های جامع مراقبت از وب‌سایت که کسب‌وکار شما را امن، سریع و همیشه باز نگه می‌دارد. اجازه ندهید دردسرهای فنی رشد شما را کند کند.",
     "ctaButton": "همین حالا شروع کنید",
     "faq": {
-        "q1": "برنامه نگهداری شامل چه مواردی است؟",
-        "a1": "برنامه ما شامل به‌روزرسانی هفتگی افزونه‌ها، قالب‌ها و هسته وردپرس، پشتیبان‌گیری روزانه در فضای ابری، مانیتورینگ ۲۴/۷، اسکن امنیتی و تغییرات جزئی محتوا است.",
-        "q2": "آیا واقعاً به برنامه نگهداری نیاز دارم؟",
-        "a2": "بله. همانطور که ماشین به تعویض روغن نیاز دارد، وب‌سایت هم به نگهداری نیاز دارد. بدون آن، سایت شما در برابر هکرها آسیب‌پذیر، کند و ممکن است خراب شود.",
-        "q3": "آیا می‌توانم هر زمان که بخواهم لغو کنم؟",
-        "a3": "قطعاً. ما معتقدیم باید هر ماه رضایت شما را جلب کنیم. هیچ قرارداد بلندمدت اجباری وجود ندارد.",
-        "q4": "اگر سایت من هک شود چه؟",
-        "a4": "اگر در برنامه نگهداری ما باشید، ما سایت هک شده شما را رایگان تعمیر می‌کنیم. ما پیشگیری از این موضوع را بسیار جدی می‌گیریم."
+        "q1": "چه چیزهایی معمولاً در پلن مراقبت گنجانده شده است؟",
+        "a1": "پلن جامع ما همه چیزهای لازم برای سالم نگه داشتن سایت شما را پوشش می‌دهد. این شامل به‌روزرسانی‌های هفتگی تمام نرم‌افزارها، بک‌آپ‌های روزانه خارج از سایت در یک فضای ابری امن، اسکن امنیتی بلادرنگ، مانیتورینگ آپ‌تایم و پشتیبانی فنی اولویت‌دار است. به آن به عنوان یک بیمه‌نامه و یک تیم فنی اختصاصی برای وب‌سایت خود فکر کنید.",
+        "q2": "چرا به یک پلن نگهداری نیاز دارم؟",
+        "a2": "وب‌سایت‌ها نرم‌افزارهای پیچیده‌ای هستند که نیاز به مراقبت دائمی دارند. بدون به‌روزرسانی‌های منظم، آنها در برابر هکرها آسیب‌پذیر می‌شوند، کند می‌شوند یا کاملاً از کار می‌افتند. پلن ما از این فجایع گران‌قیمت جلوگیری می‌کند، به شما آرامش خاطر می‌دهد و تضمین می‌کند که ویترین دیجیتال شما همیشه برای کسب‌وکار باز است.",
+        "q3": "آیا من درگیر یک قرارداد بلندمدت می‌شوم؟",
+        "a3": "خیر. ما به جلب اعتماد شما در هر ماه اعتقاد داریم. پلن‌های ما ماه به ماه هستند و شما می‌توانید هر زمان که بخواهید به صورت قانونی و بدون دردسر لغو کنید. ما می‌خواهیم شما بمانید چون از سرویس راضی هستید، نه به این دلیل که مجبورید.",
+        "q4": "اگر سایت من در حالی که در پلن شما هستم هک شود چه اتفاقی می‌افتد؟",
+        "a4": "در صورت بعید که سایت شما در زمان نظارت ما به خطر بیفتد، ما آن را کاملاً رایگان پاکسازی و بازیابی خواهیم کرد. ما مسئولیت کامل امنیت وب‌سایت شما را بر عهده می‌گیریم تا نگران آن نباشید."
     }
 }
