--- a/src/i18n/fa/speed-optimization.json
+++ b/src/i18n/fa/speed-optimization.json
@@ -1,60 +1,60 @@
 {
     "title": "بهینه‌سازی سرعت و Core Web Vitals",
-    "subtitle": "سرعت برق‌آسا برای سئو بهتر و فروش بیشتر.",
-    "description": "سایت کند یعنی از دست دادن پول. ما کدها، تصاویر و سرور شما را بهینه می‌کنیم تا به امتیاز ۹۰+ گوگل برسید و رتبه سئو خود را متحول کنید.",
+    "subtitle": "بارگذاری فوق‌سریع برای سئوی بهتر و نرخ تبدیل بالاتر.",
+    "description": "یک وب‌سایت کند هزینه بردار است. ما کدها، تصاویر و تنظیمات سرور سایت شما را بهینه می‌کنیم تا به نمره ۹۰+ در Google PageSpeed برسید، Core Web Vitals را پاس کنید و رتبه بهتری بگیرید.",
     "features": [
         "پیکربندی پیشرفته کش و CDN",
-        "فشرده‌سازی تصاویر و فرمت‌های مدرن (WebP)",
+        "فشرده‌سازی تصاویر و فرمت‌های نسل جدید",
         "مینیفای کردن کدها (CSS/JS/HTML)",
         "پاکسازی و بهینه‌سازی دیتابیس",
-        "تضمین پاس کردن Core Web Vitals"
+        "پاس کردن ارزیابی Core Web Vitals"
     ],
     "benefits": {
         "0": {
-            "title": "رتبه بهتر در گوگل",
-            "description": "گوگل صراحتاً سایت‌های سریع‌تر را ترجیح می‌دهد. پاس کردن Core Web Vitals یک سیگنال مستقیم برای پیشی گرفتن از رقباست."
+            "title": "رتبه بالاتر در گوگل",
+            "description": "گوگل صراحتاً وب‌سایت‌های سریع‌تر را ترجیح می‌دهد. پاس کردن Core Web Vitals یک سیگنال رتبه‌بندی مستقیم است که شما را بالاتر از رقبا قرار می‌دهد."
         },
         "1": {
             "title": "افزایش نرخ تبدیل",
-            "description": "یک ثانیه تأخیر نرخ تبدیل را ۷٪ کاهش می‌دهد. سرعت، ساده‌ترین راه برای افزایش فروش بدون هزینه تبلیغات بیشتر است."
+            "description": "یک ثانیه تأخیر نرخ تبدیل را ۷٪ کاهش می‌دهد. سرعت ساده‌ترین راه برای افزایش فروش بدون صرف هزینه بیشتر برای تبلیغات است."
         },
         "2": {
             "title": "تجربه کاربری بهتر",
-            "description": "کاربران از انتظار متنفرند. یک سایت چابک بازدیدکنندگان را درگیر نگه می‌دارد، نرخ پرش را کم می‌کند و اعتماد می‌سازد."
+            "description": "کاربران از انتظار متنفرند. یک وب‌سایت سریع بازدیدکنندگان را درگیر نگه می‌دارد، نرخ پرش را کاهش می‌دهد و اعتماد به برند شما را می‌سازد."
         },
         "3": {
             "title": "صرفه‌جویی در هزینه هاست",
-            "description": "کد بهینه منابع کمتری مصرف می‌کند. این یعنی سایت شما می‌تواند ترافیک بیشتری را بدون نیاز به ارتقای گران‌قیمت سرور مدیریت کند."
+            "description": "کد بهینه از منابع سرور کمتری استفاده می‌کند. این به این معنی است که سایت شما می‌تواند بدون نیاز به ارتقای سرور گران‌قیمت، ترافیک بیشتری را مدیریت کند."
         }
     },
     "process": {
         "0": {
-            "title": "ممیزی دقیق عملکرد",
-            "description": "ما هر فایل، اسکریپت و کوئری را تحلیل می‌کنیم تا دقیقاً بفهمیم چه چیزی سرعت را کم کرده و امتیاز پایه را ثبت می‌کنیم."
+            "title": "بررسی عمیق عملکرد",
+            "description": "ما هر فایل، اسکریپت و کوئری را تجزیه و تحلیل می‌کنیم تا دقیقاً بفهمیم چه چیزی سرعت شما را کند می‌کند و یک امتیاز پایه ایجاد می‌کنیم."
         },
         "1": {
             "title": "بهینه‌سازی کد و دارایی‌ها",
-            "description": "ما کدها را مینیفای، تصاویر را فشرده و اسکریپت‌های غیرضروری را به تعویق می‌اندازیم تا لود اولیه آنی شود."
+            "description": "ما کدها را مینیفای می‌کنیم، تصاویر را فشرده می‌کنیم و اسکریپت‌های غیرضروری را به تعویق می‌اندازیم تا بارگذاری اولیه فوری باشد."
         },
         "2": {
-            "title": "تنظیمات سمت سرور",
-            "description": "ما کشینگ پیشرفته (Redis/Varnish) و CDN را تنظیم می‌کنیم تا محتوا از نزدیک‌ترین نقطه به کاربر لود شود."
+            "title": "تنظیم سمت سرور",
+            "description": "ما کش پیشرفته (Redis/Varnish) و CDNها را پیکربندی می‌کنیم تا محتوای شما را از نزدیک‌ترین لبه به کاربران ارائه دهیم."
         },
         "3": {
-            "title": "تست نهایی و گزارش",
-            "description": "ما مجدداً با ابزارهای گوگل تست می‌گیریم و گزارش قبل و بعد را که بهبود سرعت را ثابت می‌کند، ارائه می‌دهیم."
+            "title": "تایید و گزارش‌دهی",
+            "description": "ما دوباره با ابزارهای Google PageSpeed تست می‌کنیم و یک گزارش قبل و بعد ارائه می‌دهیم که افزایش سرعت را اثبات می‌کند."
         }
     },
-    "heroDescription": "رتبه گوگل و نرخ تبدیل خود را با یک وب‌سایت فوق‌سریع افزایش دهید. ما کد، تصاویر و تنظیمات سرور را برای حداکثر کارایی بهینه می‌کنیم.",
-    "ctaButton": "افزایش سرعت سایت",
+    "heroDescription": "با یک وب‌سایت فوق‌سریع، رتبه گوگل و نرخ تبدیل خود را افزایش دهید. ما کد، تصاویر و تنظیمات سرور را برای حداکثر عملکرد بهینه می‌کنیم.",
+    "ctaButton": "افزایش سرعت من",
     "faq": {
-        "q1": "سایت من چقدر سریع‌تر خواهد شد؟",
-        "a1": "اگرچه هر سایتی شرایط خاص خود را دارد، ما پیشرفت چشمگیر را تضمین می‌کنیم. هدف ما کسب امتیاز سبز (۹۰+) در گوگل PageSpeed و لود تایم زیر ۲ ثانیه است. این بهبود برای تجربه کاربری و رتبه شما در گوگل حیاتی است.",
-        "q2": "آیا این یک سرویس یک‌باره است؟",
-        "a2": "بله، بهینه‌سازی فنی ما یک پروژه کامل و یک‌باره است که زیرساخت سایت را اصلاح می‌کند. البته برای حفظ این سرعت در درازمدت با افزودن محتوای جدید، سرویس‌های نگهداری ما پیشنهاد می‌شود.",
-        "q3": "آیا ظاهر سایتم بهم می‌ریزد؟",
-        "a3": "هرگز. ما با دقت وسواس‌گونه کار می‌کنیم و تمام تغییرات را ابتدا روی نسخه تستی (Staging) اعمال می‌کنیم. ما تضمین می‌کنیم که طراحی و عملکرد سایت شما دست‌نخورده باقی می‌ماند، فقط بسیار سریع‌تر می‌شود.",
-        "q4": "آیا نیاز به دسترسی هاست دارید؟",
-        "a4": "بله، برای انجام بهینه‌سازی‌های عمیق، ما به دسترسی مدیریت وردپرس و کنترل پنل هاست (یا FTP) نیاز داریم. ما با بالاترین استانداردهای امنیتی از اطلاعات شما حفاظت می‌کنیم."
+        "q1": "وب‌سایت من چقدر سریع‌تر خواهد شد؟",
+        "a1": "در حالی که هر سایتی منحصر به فرد است، ما بهبود قابل توجهی را تضمین می‌کنیم. هدف ما نمره 'سبز' (۹۰+) در Google PageSpeed Insights و زمان بارگذاری زیر ۲ ثانیه است. این بهبود هم برای تجربه کاربری و هم برای رتبه‌بندی گوگل حیاتی است.",
+        "q2": "آیا این یک تعمیر یک‌باره است یا سرویس ماهانه؟",
+        "a2": "بهینه‌سازی ما یک پروژه جامع و یک‌باره است. ما زیرساخت فنی سایت شما را بازسازی می‌کنیم. با این حال، حفظ این سرعت در طول زمان با اضافه کردن محتوای جدید ممکن است نیاز به بررسی‌های گاه‌به‌گاه داشته باشد که در پلن‌های نگهداری ما پوشش داده می‌شود.",
+        "q3": "آیا بهینه‌سازی سرعت طراحی سایت من را به هم می‌ریزد؟",
+        "a3": "هرگز. ما با دقت هر تغییر را قبل از اعمال روی سایت زنده شما، در محیط تست آزمایش می‌کنیم. ما تضمین می‌کنیم که چیدمان، عملکرد و طراحی شما دست‌نخورده باقی می‌ماند—فقط بسیار سریع‌تر.",
+        "q4": "آیا به دسترسی سرور من نیاز دارید؟",
+        "a4": "بله، برای انجام بهینه‌سازی‌های عمیق، ما به دسترسی مدیریتی به داشبورد وردپرس و کنترل پنل هاستینگ شما (FTP/SFTP) نیاز خواهیم داشت. ما با بالاترین سطح امنیت با اعتبارنامه شما رفتار می‌کنیم."
     }
 }
