--- a/src/i18n/fa/ui-ux-audit.json
+++ b/src/i18n/fa/ui-ux-audit.json
@@ -1,60 +1,60 @@
 {
-    "title": "ممیزی تخصصی UI/UX",
-    "subtitle": "کشف نقاط اصطکاک پنهانی که فروش شما را می‌کشند.",
-    "description": "دیگر حدس نزنید چرا بازدیدکنندگان خرید نمی‌کنند. ممیزی تخصصی ما دقیقاً نشان می‌دهد کاربران کجا گیر می‌کنند، کلافه می‌شوند یا سایت را ترک می‌کنند، و نقشه‌ای برای دو برابر کردن نرخ تبدیل به شما می‌دهد.",
+    "title": "ممیزی حرفه‌ای UI/UX",
+    "subtitle": "کشف نقاط اصطکاک پنهانی که نرخ تبدیل شما را می‌کشند.",
+    "description": "حدس زدن اینکه چرا بازدیدکنندگان خرید نمی‌کنند را متوقف کنید. ممیزی متخصص ما دقیقاً مشخص می‌کند که کاربران کجا گیر می‌کنند، ناامید می‌شوند یا گیج می‌شوند و نقشه‌ی راهی برای دو برابر کردن نرخ تبدیل به شما ارائه می‌دهد.",
     "features": [
-        "تحلیل ویدیویی جامع از تجربه کاربر",
-        "ارزیابی مکاشفه‌ای و تست کاربردپذیری",
-        "تحلیل اصطکاک در قیف فروش",
-        "بررسی استانداردهای دسترسی‌‌پذیری (Accessibility)",
-        "سند PDF راهکارهای عملی و نقشه راه اصلاح"
+        "تحلیل ویدیویی جامع گام‌به‌گام",
+        "ارزیابی هیوریستیک و تست کاربردپذیری",
+        "تحلیل اصطکاک قیف تبدیل",
+        "بررسی انطباق با دسترس‌پذیری",
+        "گزارش PDF عملی و نقشه راه اصلاحات"
     ],
     "benefits": {
         "0": {
-            "title": "پایان حدس و گمان",
-            "description": "نظر شخصی فروش نمی‌آورد؛ داده می‌آورد. ما بحث‌های تیمی را با تحلیل عینی اینکه کاربران کجا و چرا سایت را ترک می‌کنند، جایگزین می‌کنیم."
+            "title": "توقف حدس و گمان، شروع دانستن",
+            "description": "نظرات نمی‌فروشند؛ داده‌ها می‌فروشند. ما بحث‌های تیمی را با تحلیل عینی اینکه کاربران کجا و چرا سایت شما را ترک می‌کنند، جایگزین می‌کنیم."
         },
         "1": {
-            "title": "دو برابر کردن بازده سرمایه (ROI)",
-            "description": "تبدیل بازدیدکننده موجود ارزان‌تر از خرید ترافیک جدید است. رفع مشکلات کاربری، پرسودترین کاری است که می‌توانید انجام دهید."
+            "title": "دو برابر کردن ROI",
+            "description": "تبدیل ترافیک موجود ارزان‌تر از خرید ترافیک جدید است. رفع مشکلات کاربردپذیری بالاترین ROI را در بین هر فعالیتی دارد."
         },
         "2": {
-            "title": "نگاهی تازه و بی‌طرف",
-            "description": "شما آنقدر به محصول خود نزدیکید که ایرادات را نمی‌بینید. ما دیدگاهی بی‌طرفانه و خبره از تجربه اولین بازدید کاربر ارائه می‌دهیم."
+            "title": "یک جفت چشم تازه",
+            "description": "شما بیش از حد به محصول خود نزدیک هستید تا نقص‌ها را ببینید. ما یک دیدگاه بی‌طرفانه و متخصص از تجربه کاربر بار اول ارائه می‌دهیم."
         },
         "3": {
-            "title": "نقشه راه عملیاتی",
-            "description": "ما فقط مشکل را نمی‌گوییم؛ راهکار اولویت‌بندی شده می‌دهیم. شما چک‌لیستی دریافت می‌کنید که آماده اجرا توسط برنامه‌نویسان است."
+            "title": "نقشه راه عملی",
+            "description": "ما فقط مشکلات را لیست نمی‌کنیم؛ ما راه‌حل‌های اولویت‌بندی شده ارائه می‌دهیم. شما چک‌لیستی آماده برای اجرا توسط توسعه‌دهندگان خود دریافت می‌کنید."
         }
     },
     "process": {
         "0": {
             "title": "کشف و شناخت",
-            "description": "ما اهداف تجاری، مخاطبان هدف و معیارهای کلیدی تبدیل شما را بررسی می‌کنیم تا معنی 'موفقیت' را درک کنیم."
+            "description": "ما اهداف کسب‌وکار، مخاطبان هدف و معیارهای کلیدی تبدیل شما را یاد می‌گیریم تا بفهمیم 'موفقیت' چه شکلی است."
         },
         "1": {
-            "title": "ارزیابی هیوریستیک",
-            "description": "کارشناسان ما سایت شما را بر اساس ۱۰ اصل جهانی کاربردپذیری (اصول جیکوب نیلسن) ارزیابی می‌کنند."
+            "title": "بررسی هیوریستیک",
+            "description": "کارشناسان ما سایت شما را در برابر ۱۰ اصل کاربردپذیری شناخته‌شده جهانی (هیوریستیک‌های جیکوب نیلسن) ارزیابی می‌کنند."
         },
         "2": {
-            "title": "تحلیل گام‌به‌گام (Walkthrough)",
-            "description": "ما سفر واقعی کاربر (خرید، ثبت‌نام) را شبیه‌سازی کرده و ویدیویی ضبط می‌کنیم که جزئیات هر اصطکاک را نشان می‌دهد."
+            "title": "تحلیل گام‌به‌گام",
+            "description": "ما سفرهای واقعی کاربر (خرید، ثبت‌نام) را شبیه‌سازی می‌کنیم و ویدیویی ضبط می‌کنیم که جزئیات هر نقطه اصطکاک مواجه شده را نشان می‌دهد."
         },
         "3": {
             "title": "تحویل استراتژی",
-            "description": "شما ویدیو و گزارش PDF اولویت‌بندی شده را دریافت می‌کنید. ما یافته‌ها را با شما مرور می‌کنیم تا همه چیز شفاف باشد."
+            "description": "شما ویدیو و یک گزارش PDF اولویت‌بندی شده دریافت می‌کنید. ما یافته‌ها را با شما مرور می‌کنیم تا از شفافیت کامل اطمینان حاصل کنیم."
         }
     },
-    "heroDescription": "یک ممیزی ویدئویی جامع ۲۰+ دقیقه‌ای از وب‌سایت خود دریافت کنید. نقاط اصطکاک را شناسایی کنید و نقشه راهی روشن برای افزایش فروش بگیرید.",
-    "ctaButton": "دریافت ممیزی",
+    "heroDescription": "یک ممیزی ویدیویی جامع ۲۰+ دقیقه‌ای از وب‌سایت خود دریافت کنید. نقاط اصطکاک را شناسایی کنید و یک نقشه راه روشن برای افزایش فروش بگیرید.",
+    "ctaButton": "دریافت ممیزی من",
     "faq": {
-        "q1": "دقیقاً چه چیزی دریافت می‌کنم؟",
-        "a1": "شما یک عیب‌یابی کامل دریافت می‌کنید: یک ویدیوی ۲۰+ دقیقه‌ای که در آن سایت شما را به عنوان کاربر بررسی می‌کنیم، به‌علاوه یک گزارش PDF جامع که مشکلات را بر اساس اهمیت اولویت‌بندی کرده و راهکارهای اجرایی ارائه می‌دهد.",
-        "q2": "آیا خودتان مشکلات را حل می‌کنید؟",
-        "a2": "حتماً. اگرچه ممیزی یک سرویس تشخیصی مستقل است، اما بسیاری از مشتریان پس از دیدن گزارش، اجرای اصلاحات را هم به ما می‌سپارند. ما می‌توانیم پروپوزال جداگانه‌ای برای اجرای دقیق نقشه راه ارائه دهیم.",
-        "q3": "انجام ممیزی چقدر زمان می‌برد؟",
-        "a3": "یک بررسی دستی و دقیق زمان‌بر است. ما معمولاً گزارش و ویدیوی تحلیل را ظرف ۳ تا ۵ روز کاری پس از سفارش تحویل می‌دهیم.",
-        "q4": "آیا برای سایت‌های قدیمی مفید است؟",
-        "a4": "اتفاقاً بیشترین فایده را برای سایت‌های فعال دارد! اگر ترافیک دارید اما فروش نه، ممیزی بالاترین نرخ بازگشت سرمایه (ROI) را دارد؛ چون قبل از اینکه پول بیشتری برای تبلیغات خرج کنید، سطل سوراخ (سایت) را تعمیر می‌کند."
+        "q1": "دقیقاً چه چیزی با ممیزی دریافت می‌کنم؟",
+        "a1": "شما یک عیب‌یابی کامل از وب‌سایت خود دریافت می‌کنید. این شامل یک ویدیوی ۲۰+ دقیقه‌ای گام‌به‌گام است که در آن ما سایت شما را به صورت درنگ به عنوان یک کاربر تحلیل می‌کنیم، به علاوه یک گزارش PDF دقیق که مشکلات را بر اساس شدت اولویت‌بندی می‌کند و توصیه‌های خاص و عملی در مورد نحوه رفع آنها ارائه می‌دهد.",
+        "q2": "آیا شما می‌توانید تغییرات را برای من پیاده‌سازی کنید؟",
+        "a2": "قطعاً. در حالی که ممیزی یک سرویس عیب‌یابی مستقل است، بسیاری از مشتریان پس از آن ما را برای پیاده‌سازی اصلاحات توصیه شده استخدام می‌کنند. ما می‌توانیم یک پیش‌فاکتور جداگانه برای اجرای دقیق نقشه راه بهینه‌سازی ارائه دهیم.",
+        "q3": "یک ممیزی چقدر طول می‌کشد؟",
+        "a3": "یک ممیزی دستی دقیق زمان‌بر است. ما معمولاً ویدیو و گزارش جامع شما را در عرض ۳-۵ روز کاری پس از رزرو تحویل می‌دهیم.",
+        "q4": "آیا این برای یک وب‌سایت قدیمی مفید است؟",
+        "a4": "این احتمالاً برای سایت‌های تثبیت‌شده *مفیدترین* است. اگر ترافیک دارید اما فروش کم است، یک ممیزی اغلب بالاترین ROI را در بین هر سرمایه‌گذاری بازاریابی دارد، با تعمیر سطل سوراخ قبل از اینکه آب (تبلیغات) بیشتری در آن بریزید."
     }
 }
