--- a/src/i18n/fa/service-areas.json
+++ b/src/i18n/fa/service-areas.json
@@ -15,6 +15,60 @@
   "multilingualSupportDesc": "ارتباط به زبان دلخواه شما - انگلیسی، عربی و فارسی",
   "locations": [
     {
+      "name": "مسقط",
+      "slug": "muscat",
+      "country": "عمان",
+      "description": "ارائه خدمات پیشرفته طراحی وب و سئو به کسب‌وکارها در مسقط. ما به شرکت‌های عمانی کمک می‌کنیم تا حضور آنلاین قوی داشته باشند و به طور موثر به مخاطبان هدف خود دست یابند.",
+      "longDescription": "به عنوان آژانس پیشرو طراحی وب و سئو در مسقط، ما در کمک به کسب‌وکارهای محلی برای تسلط بر فضای دیجیتال تخصص داریم. تیم ما ویژگی‌های منحصر به فرد بازار عمان را درک می‌کند و راهکارهای سفارشی ایجاد می‌کند که با مخاطبان هدف شما هماهنگ است.",
+      "services": [
+        "طراحی و توسعه وب",
+        "خدمات سئو",
+        "راهکارهای تجارت الکترونیک",
+        "دیجیتال مارکتینگ",
+        "توسعه وردپرس"
+      ],
+      "image": "/images/locations/muscat.webp",
+      "benefits": [
+        "تخصص در بازار محلی مسقط",
+        "پشتیبانی زبان عربی و انگلیسی",
+        "طراحی ریسپانسیو موبایل فرست",
+        "سرعت بارگذاری بهینه شده برای عمان",
+        "پشتیبانی و نگهداری مداوم"
+      ],
+      "stats": {
+        "projects": "۵۰+",
+        "clients": "۳۵+",
+        "experience": "۵+"
+      }
+    },
+    {
+      "name": "دبی",
+      "slug": "dubai",
+      "country": "امارات",
+      "description": "ارائه راهکارهای دیجیتال حرفه‌ای به کسب‌وکارها در دبی. خدمات ما به شرکت‌های مستقر در امارات کمک می‌کند تا در بازار پویای دبی با راهکارهای وب نوآورانه رقابت کنند.",
+      "longDescription": "محیط کسب‌وکار پرشتاب دبی نیازمند حضور دیجیتال استثنایی است. ما وب‌سایت‌های خیره‌کننده ایجاد می‌کنیم و استراتژی‌های قدرتمند سئو را پیاده‌سازی می‌کنیم که به کسب‌وکار شما کمک می‌کند در یکی از رقابتی‌ترین بازارهای جهان متمایز شود.",
+      "services": [
+        "توسعه وب سفارشی",
+        "سئو محلی",
+        "توسعه اپلیکیشن موبایل",
+        "استراتژی برند",
+        "بازاریابی محتوا"
+      ],
+      "image": "/images/locations/dubai.webp",
+      "benefits": [
+        "درک فرهنگ کسب‌وکار امارات",
+        "راهکارهای وب‌سایت چند زبانه",
+        "تخصص در تجارت الکترونیک برای بازار دبی",
+        "استراتژی‌های دیجیتال نتیجه‌محور",
+        "پشتیبانی مشتری ۲۴/۷"
+      ],
+      "stats": {
+        "projects": "۷۵+",
+        "clients": "۵۰+",
+        "experience": "۶+"
+      }
+    },
+    {
       "name": "تهران",
       "slug": "tehran",
       "country": "ایران",
